<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sr1"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/welcome_to_calamus"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_toEndOf="@id/sr1"
                android:layout_alignBottom="@id/sr1"
                android:layout_alignTop="@id/sr1"
                android:src="@drawable/ic_feather"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="TODO" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="This is E-Library for you."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="Version 1.02"
            android:layout_marginBottom="50dp"
            tools:ignore="RtlHardcoded" />

        <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/pb_loading"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/bg_progressbar"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:drawablePadding="8dp"
            android:background="@drawable/input_bg"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:hint="Phone number( Type in english)"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:drawablePadding="8dp"
            android:background="@drawable/input_bg"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="Enter your password"/>

        <Button
            android:id="@+id/bt_log_in"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@android:color/white"
            android:text="Login"
            android:background="@drawable/bg_download_button"/>

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="25dp"
            android:text="@string/no_account_register_now"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_call_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</LinearLayout>